app/client/style.css
/* Use Open Sans as the default sans serif font. */
@import url("https://fonts.googleapis.com/css?family=Open+Sans|Monda:300,400,500,700|Source+Code+Pro:300,400,500,700");

/* Set up some CSS variables to theme the application. */
:root {
  --matr-navbar-bg: #1C4633;
  --matr-navbar-bg-rgb: 28, 70, 51;
}

/* Change bootstrap variable values.
 See https://getbootstrap.com/docs/5.2/customize/css-variables/
 */
body {
  --bs-light-rgb: var(--matr-navbar-bg-rgb);
}

/* Set the alert background on the signin and signup pages. */
#signin-page .alert-light, #signup-page .alert-light {
  --bs-alert-bg: var(--matr-navbar-bg);
  --bs-alert-color: white;
}

/* Define custom styles */
.green-background {
  background-color: var(--matr-navbar-bg);
  color: var(--bs-dark);
  padding-top: 10px;
  padding-bottom: 20px;
}

.navbar, #login-dropdown, footer {
  font-family: 'Monda', sans-serif;
  color: white;
}

/* Change the toggle button's highlight color to white */
#toggle-button {
  border: none;
  color: white;
}

/* Change the toggle icon color to white */
#toggle-button .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

/* Change the toggle icon's border color to white */
#toggle-button.navbar-toggler {
  border-color: rgb(255, 255, 255);
}

#get-started {
  text-decoration: none;
}

